<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.android.settings.preferences.SecureSettingListPreference
        android:key="status_bar_battery_style"
        android:title="@string/battery_style_title"
        android:summary="@string/battery_style_summary"
        android:entries="@array/battery_style_entries"
        android:entryValues="@array/battery_style_values"
        android:defaultValue="0" />

    <com.android.settings.preferences.SystemSettingListPreference
        android:key="status_bar_show_battery_percent"
        android:title="@string/show_battery_percent_title"
        android:summary="@string/show_battery_percent_summary"
        android:entries="@array/battery_percent_entries"
        android:entryValues="@array/battery_percent_values"
        android:defaultValue="0" />

    <com.android.settings.preferences.SecureSettingSwitchPreference
        android:key="status_bar_big_battery_icon"
        android:title="@string/large_battery_icon_title"
        android:summary="@string/large_battery_icon_summary" />
    <PreferenceCategory
        android:key="battery_bar"
        android:title="@string/battery_bar_title"/>

        <ListPreference
            android:key="battery_bar_list"
            android:title="@string/battery_bar_location"
            android:entries="@array/battery_bar_entries"
            android:entryValues="@array/battery_bar_values" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="battery_bar_color"
            android:title="@string/battery_bar_color"
            android:defaultValue="0xffffffff"
            android:dialogTitle="@string/battery_bar_color" />

        <ListPreference
            android:key="battery_bar_style"
            android:title="@string/battery_bar_style_title"
            android:entries="@array/battery_bar_style_entries"
            android:entryValues="@array/battery_bar_style_values" />

        <ListPreference
            android:key="battery_bar_thickness"
            android:title="@string/battery_bar_thickness_title"
            android:entries="@array/battery_bar_thickness_entries"
            android:entryValues="@array/battery_bar_thickness_values" />

        <SwitchPreference
            android:key="battery_bar_animate"
            android:title="@string/battery_bar_animate_title"
            android:summary="@string/battery_bar_animate_summary" />
</PreferenceScreen>
